--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/iamshaunjp/node-express-jwt-auth.git"
+        "url": "https://github.com/sandstone1/course-node-auth.git"
     },
     "keywords": [],
     "author": "",
@@ -24,7 +24,7 @@
     "bugs": {
         "url": "https://github.com/iamshaunjp/node-express-jwt-auth.git/issues"
     },
-    "homepage": "https://github.com/iamshaunjp/node-express-jwt-auth#readme",
+    "homepage": "",
     "engines": {
         "node": "10.x"
     }
