--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "bugs": {
         "url": "https://github.com/iamshaunjp/node-express-jwt-auth.git/issues"
     },
-    "homepage": "",
+    "homepage": "https://c-node-auth.herokuapp.com/",
     "engines": {
         "node": "10.x"
     }
