--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "node-express-jwt-auth",
+    "name": "node-auth",
     "version": "1.0.0",
     "description": "",
     "main": "app.js",
